Bug 367674 - Unexpected crash after alt+tab from kdesu'ed fullscreen app
Summary: Unexpected crash after alt+tab from kdesu'ed fullscreen app
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.6.5
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-08-22 13:44 UTC by deviatov
Modified: 2016-08-26 10:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description deviatov 2016-08-22 13:44:36 UTC
Application: plasmashell (5.6.5)
 (Compiled from sources)
Qt Version: 5.6.1
Frameworks Version: 5.23.0
Operating System: Linux 4.0.9-gentoo-gnu20160422 x86_64
Distribution: "NAME=Gentoo"

-- Information about the crash:
- What I was doing when the application crashed:
I had an application running from another user (using kdesu) in full-screen mode and pressed alt-tab to switch to antoher application, which is run under one more user, not in fullscreen mode. Then the taskbar dissapeared, and later reapped again.

- Unusual desktop behavior I noticed:
Before the crash, various windows with the same program name were not grouped in the taskbar. After the crash they became grouped.
Before the crash, "okular" had a dark icon in the taskbar. After the crash, it became white.

-- Backtrace:
Application: Plasma (plasmashell), signal: Floating point exception
Using host libthread_db library "/lib64/libthread_db.so.1".
84	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7fdcbba2c780 (LWP 3332))]

Thread 9 (Thread 0x7fdca8f8a700 (LWP 3339)):
#0  0x00007fdcb638314d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fdcba3daac2 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007fdcba3dc72f in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007fdcaacc2029 in QXcbEventReader::run (this=0x1d33590) at qxcbconnection.cpp:1325
#4  0x00007fdcb6a3e88c in QThreadPrivate::start (arg=0x1d33590) at thread/qthread_unix.cpp:341
#5  0x00007fdcb5b8c444 in start_thread (arg=0x7fdca8f8a700) at pthread_create.c:334
#6  0x00007fdcb638c12d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 8 (Thread 0x7fdca3652700 (LWP 3340)):
#0  g_mutex_unlock (mutex=0x7fdc9c000990) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gthread-posix.c:1350
#1  0x00007fdcb21a2420 in g_main_context_prepare (context=context@entry=0x7fdc9c000990, priority=priority@entry=0x7fdca3651cd0) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3440
#2  0x00007fdcb21a2e18 in g_main_context_iterate (context=context@entry=0x7fdc9c000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3820
#3  0x00007fdcb21a2ffc in g_main_context_iteration (context=0x7fdc9c000990, may_block=1) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3901
#4  0x00007fdcb6c2c5dc in QEventDispatcherGlib::processEvents (this=0x7fdc9c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#5  0x00007fdcb6bdec4a in QEventLoop::exec (this=this@entry=0x7fdca3651e10, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007fdcb6a3a154 in QThread::exec (this=this@entry=0x7fdcbbbaa240 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread.cpp:500
#7  0x00007fdcbbb3d235 in QDBusConnectionManager::run (this=0x7fdcbbbaa240 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:189
#8  0x00007fdcb6a3e88c in QThreadPrivate::start (arg=0x7fdcbbbaa240 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:341
#9  0x00007fdcb5b8c444 in start_thread (arg=0x7fdca3652700) at pthread_create.c:334
#10 0x00007fdcb638c12d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7fdca1e13700 (LWP 3475)):
#0  g_mutex_unlock (mutex=0x7fdc94000990) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gthread-posix.c:1350
#1  0x00007fdcb21a2420 in g_main_context_prepare (context=context@entry=0x7fdc94000990, priority=priority@entry=0x7fdca1e12ce0) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3440
#2  0x00007fdcb21a2e18 in g_main_context_iterate (context=context@entry=0x7fdc94000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3820
#3  0x00007fdcb21a2ffc in g_main_context_iteration (context=0x7fdc94000990, may_block=1) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3901
#4  0x00007fdcb6c2c5dc in QEventDispatcherGlib::processEvents (this=0x7fdc940008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#5  0x00007fdcb6bdec4a in QEventLoop::exec (this=this@entry=0x7fdca1e12e20, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007fdcb6a3a154 in QThread::exec (this=this@entry=0x1de37b0) at thread/qthread.cpp:500
#7  0x00007fdcb9279a65 in QQmlThreadPrivate::run (this=0x1de37b0) at qml/ftw/qqmlthread.cpp:141
#8  0x00007fdcb6a3e88c in QThreadPrivate::start (arg=0x1de37b0) at thread/qthread_unix.cpp:341
#9  0x00007fdcb5b8c444 in start_thread (arg=0x7fdca1e13700) at pthread_create.c:334
#10 0x00007fdcb638c12d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7fdc93fff700 (LWP 3501)):
#0  g_mutex_lock (mutex=mutex@entry=0x7fdc8c000990) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gthread-posix.c:1338
#1  0x00007fdcb21a28fc in g_main_context_check (context=context@entry=0x7fdc8c000990, max_priority=2147483647, fds=fds@entry=0x7fdc8c003070, n_fds=n_fds@entry=1) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3683
#2  0x00007fdcb21a2e90 in g_main_context_iterate (context=context@entry=0x7fdc8c000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3837
#3  0x00007fdcb21a2ffc in g_main_context_iteration (context=0x7fdc8c000990, may_block=1) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3901
#4  0x00007fdcb6c2c5dc in QEventDispatcherGlib::processEvents (this=0x7fdc8c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#5  0x00007fdcb6bdec4a in QEventLoop::exec (this=this@entry=0x7fdc93ffee20, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007fdcb6a3a154 in QThread::exec (this=this@entry=0x203ce60) at thread/qthread.cpp:500
#7  0x00007fdcb9279a65 in QQmlThreadPrivate::run (this=0x203ce60) at qml/ftw/qqmlthread.cpp:141
#8  0x00007fdcb6a3e88c in QThreadPrivate::start (arg=0x203ce60) at thread/qthread_unix.cpp:341
#9  0x00007fdcb5b8c444 in start_thread (arg=0x7fdc93fff700) at pthread_create.c:334
#10 0x00007fdcb638c12d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7fdc92df6700 (LWP 3502)):
#0  pthread_cond_wait () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fdcbb45d884 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7fdcbb54be40 <QTWTF::pageheap_memory>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00007fdcbb45d8c9 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00007fdcb5b8c444 in start_thread (arg=0x7fdc92df6700) at pthread_create.c:334
#4  0x00007fdcb638c12d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7fdc91e22700 (LWP 3503)):
#0  0x00007fdcb638314d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fdcb21a2eec in g_main_context_poll (priority=2147483647, n_fds=1, fds=0x7fdc04003070, timeout=-1, context=0x7fdc04000990) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:4135
#2  g_main_context_iterate (context=context@entry=0x7fdc04000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3835
#3  0x00007fdcb21a2ffc in g_main_context_iteration (context=0x7fdc04000990, may_block=1) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3901
#4  0x00007fdcb6c2c5dc in QEventDispatcherGlib::processEvents (this=0x7fdc040008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#5  0x00007fdcb6bdec4a in QEventLoop::exec (this=this@entry=0x7fdc91e21e20, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007fdcb6a3a154 in QThread::exec (this=this@entry=0x22a5d60) at thread/qthread.cpp:500
#7  0x00007fdcb9279a65 in QQmlThreadPrivate::run (this=0x22a5d60) at qml/ftw/qqmlthread.cpp:141
#8  0x00007fdcb6a3e88c in QThreadPrivate::start (arg=0x22a5d60) at thread/qthread_unix.cpp:341
#9  0x00007fdcb5b8c444 in start_thread (arg=0x7fdc91e22700) at pthread_create.c:334
#10 0x00007fdcb638c12d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7fdc09b03700 (LWP 3553)):
#0  0x00007fdcb638314d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fdcb21a2eec in g_main_context_poll (priority=2147483647, n_fds=1, fds=0x7fdc00002f20, timeout=-1, context=0x7fdc00000990) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:4135
#2  g_main_context_iterate (context=context@entry=0x7fdc00000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3835
#3  0x00007fdcb21a2ffc in g_main_context_iteration (context=0x7fdc00000990, may_block=1) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3901
#4  0x00007fdcb6c2c5dc in QEventDispatcherGlib::processEvents (this=0x7fdc000008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#5  0x00007fdcb6bdec4a in QEventLoop::exec (this=this@entry=0x7fdc09b02dd0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007fdcb6a3a154 in QThread::exec (this=this@entry=0x251f6a0) at thread/qthread.cpp:500
#7  0x00007fdcb9bffe86 in QQuickPixmapReader::run (this=0x251f6a0) at util/qquickpixmapcache.cpp:817
#8  0x00007fdcb6a3e88c in QThreadPrivate::start (arg=0x251f6a0) at thread/qthread_unix.cpp:341
#9  0x00007fdcb5b8c444 in start_thread (arg=0x7fdc09b03700) at pthread_create.c:334
#10 0x00007fdcb638c12d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fdbfb194700 (LWP 3620)):
#0  g_source_iter_next (iter=iter@entry=0x7fdbfb193c40, source=source@entry=0x7fdbfb193c38) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:933
#1  0x00007fdcb21a23cb in g_main_context_prepare (context=context@entry=0x7fdbf4000990, priority=priority@entry=0x7fdbfb193cc0) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3420
#2  0x00007fdcb21a2e18 in g_main_context_iterate (context=context@entry=0x7fdbf4000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3820
#3  0x00007fdcb21a2ffc in g_main_context_iteration (context=0x7fdbf4000990, may_block=1) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3901
#4  0x00007fdcb6c2c5dc in QEventDispatcherGlib::processEvents (this=0x7fdbf40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#5  0x00007fdcb6bdec4a in QEventLoop::exec (this=this@entry=0x7fdbfb193e00, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007fdcb6a3a154 in QThread::exec (this=this@entry=0x2fe46b0) at thread/qthread.cpp:500
#7  0x00007fdbfc046957 in KCupsConnection::run (this=0x2fe46b0) at /usr/src/debug/kde-apps/print-manager-15.12.3/print-manager-15.12.3/libkcups/KCupsConnection.cpp:304
#8  0x00007fdcb6a3e88c in QThreadPrivate::start (arg=0x2fe46b0) at thread/qthread_unix.cpp:341
#9  0x00007fdcb5b8c444 in start_thread (arg=0x7fdbfb194700) at pthread_create.c:334
#10 0x00007fdcb638c12d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7fdcbba2c780 (LWP 3332)):
[KCrash Handler]
#6  0x00007fdc90317c36 in SortedActivitiesModel::relativeActivity (this=0x23a8290, relative=relative@entry=1) at /usr/src/debug/kde-plasma/plasma-desktop-5.6.5/plasma-desktop-5.6.5/imports/activitymanager/sortedactivitiesmodel.cpp:387
#7  0x00007fdc90311ab0 in SwitcherBackend::switchToActivity (this=this@entry=0x23c3780, direction=direction@entry=SwitcherBackend::Next) at /usr/src/debug/kde-plasma/plasma-desktop-5.6.5/plasma-desktop-5.6.5/imports/activitymanager/switcherbackend.cpp:212
#8  0x00007fdc90312807 in SwitcherBackend::keybdSwitchToNextActivity (this=0x23c3780) at /usr/src/debug/kde-plasma/plasma-desktop-5.6.5/plasma-desktop-5.6.5/imports/activitymanager/switcherbackend.cpp:200
#9  0x00007fdcb6c07752 in QtPrivate::QSlotObjectBase::call (a=0x7fff33255850, r=0x23c3780, this=0x23c28c0) at ../../src/corelib/kernel/qobject_impl.h:124
#10 QMetaObject::activate (sender=sender@entry=0x23cf500, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7fff33255850) at kernel/qobject.cpp:3715
#11 0x00007fdcb6c07c87 in QMetaObject::activate (sender=sender@entry=0x23cf500, m=m@entry=0x7fdcb79716c0 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7fff33255850) at kernel/qobject.cpp:3595
#12 0x00007fdcb7472072 in QAction::triggered (this=this@entry=0x23cf500, _t1=false) at .moc/moc_qaction.cpp:369
#13 0x00007fdcb7474e0d in QAction::activate (this=0x23cf500, event=<optimized out>) at kernel/qaction.cpp:1163
#14 0x00007fdcb93b35d9 in QAction::trigger (this=0x23cf500) at /usr/include/qt5/QtWidgets/qaction.h:177
#15 KGlobalAccelPrivate::_k_invokeAction (this=0x1d8aed0, componentUnique=..., actionUnique=..., timestamp=266347253) at /usr/src/debug/kde-frameworks/kglobalaccel-5.23.0-r1/kglobalaccel-5.23.0/src/kglobalaccel.cpp:449
#16 0x00007fdcb6c070ec in QMetaObject::activate (sender=0x1d99770, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff33255a60) at kernel/qobject.cpp:3730
#17 0x00007fdcb6c07c87 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7fdcb95c9c00 <OrgKdeKglobalaccelComponentInterface::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fff33255a60) at kernel/qobject.cpp:3595
#18 0x00007fdcb93c11e9 in OrgKdeKglobalaccelComponentInterface::globalShortcutPressed (this=<optimized out>, _t1=..., _t2=..., _t3=266347253) at /usr/src/debug/kde-frameworks/kglobalaccel-5.23.0-r1/kglobalaccel-5.23.0_build/src/kglobalaccel_component_interface.moc:221
#19 0x00007fdcb93c1854 in OrgKdeKglobalaccelComponentInterface::qt_static_metacall (_o=_o@entry=0x1d99770, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=0, _a=_a@entry=0x7fff33255c80) at /usr/src/debug/kde-frameworks/kglobalaccel-5.23.0-r1/kglobalaccel-5.23.0_build/src/kglobalaccel_component_interface.moc:118
#20 0x00007fdcb93c208b in OrgKdeKglobalaccelComponentInterface::qt_metacall (this=0x1d99770, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fff33255c80) at /usr/src/debug/kde-frameworks/kglobalaccel-5.23.0-r1/kglobalaccel-5.23.0_build/src/kglobalaccel_component_interface.moc:190
#21 0x00007fdcbbb49b6c in QDBusConnectionPrivate::deliverCall (this=<optimized out>, object=<optimized out>, msg=..., metaTypes=..., slotIdx=<optimized out>) at qdbusintegrator.cpp:979
#22 0x00007fdcb6c0865a in QObject::event (this=0x1d99770, e=<optimized out>) at kernel/qobject.cpp:1256
#23 0x00007fdcb747c5dc in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x1d99770, e=0x7fdc9c00c150) at kernel/qapplication.cpp:3804
#24 0x00007fdcb7480d00 in QApplication::notify (this=0x7fff33256390, receiver=0x1d99770, e=0x7fdc9c00c150) at kernel/qapplication.cpp:3561
#25 0x00007fdcb6be00b0 in QCoreApplication::notifyInternal2 (receiver=0x1d99770, event=event@entry=0x7fdc9c00c150) at kernel/qcoreapplication.cpp:1015
#26 0x00007fdcb6be22e3 in QCoreApplication::sendEvent (event=0x7fdc9c00c150, receiver=<optimized out>) at kernel/qcoreapplication.h:225
#27 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x1d13680) at kernel/qcoreapplication.cpp:1650
#28 0x00007fdcb6be2888 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1508
#29 0x00007fdcb6c2c553 in postEventSourceDispatch (s=0x1d57cd0) at kernel/qeventdispatcher_glib.cpp:270
#30 0x00007fdcb21a2c6d in g_main_dispatch (context=0x7fdca40016f0) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3154
#31 g_main_context_dispatch (context=context@entry=0x7fdca40016f0) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3769
#32 0x00007fdcb21a2f50 in g_main_context_iterate (context=context@entry=0x7fdca40016f0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3840
#33 0x00007fdcb21a2ffc in g_main_context_iteration (context=0x7fdca40016f0, may_block=1) at /usr/src/debug/dev-libs/glib-2.46.2-r3/glib-2.46.2/glib/gmain.c:3901
#34 0x00007fdcb6c2c5c7 in QEventDispatcherGlib::processEvents (this=0x1d50f40, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#35 0x00007fdcb6bdec4a in QEventLoop::exec (this=this@entry=0x7fff33256240, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#36 0x00007fdcb6be670c in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1285
#37 0x00007fdcb6f1089c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1607
#38 0x00007fdcb7479235 in QApplication::exec () at kernel/qapplication.cpp:2979
#39 0x000000000041af0e in main (argc=2, argv=<optimized out>) at /usr/src/debug/kde-plasma/plasma-workspace-5.6.5.1-r2/plasma-workspace-5.6.5/shell/main.cpp:139

Possible duplicates by query: bug 360339.

Reported using DrKonqi
Comment 1 Marco Martin 2016-08-26 10:56:18 UTC
Git commit 52d6f260addb2f99082b5ce61a63b5fca9afeb57 by Marco Martin.
Committed on 26/08/2016 at 10:51.
Pushed by mart into branch 'master'.

check for model row count momentarly being 0

the behavior of x%0 is undefined by standard
and crashing on gcc, if the model for an instand has 0
rows, it can cause crashes
reviewed-by:Bhushan Shah <bhush94@gmail.com>

M  +5    -0    imports/activitymanager/sortedactivitiesmodel.cpp

http://commits.kde.org/plasma-desktop/52d6f260addb2f99082b5ce61a63b5fca9afeb57