check for model row count momentarly being 0

the behavior of x%0 is undefined by standard
and crashing on gcc, if the model for an instand has 0
rows, it can cause crashes
reviewed-by:Bhushan Shah <bhush94@gmail.com>
BUG:367674